# python-uv-service-template

./: .env  README.md  config.yaml  pyproject.toml  service_template
common_utils/: logger.py
src/some_proj/: some_file.py
src/some_proj/api/: server.py
utils/: conf_loader.py  get_env.py
